--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>Hello World</h1>
 <p>Trying out github pages for my first blog, I would be sharing some of my work soon ...</p>
+
+<h3>Tensorflow </h3>
+<a href="http://irtza.github.io/Tensorflow_Build_CUDA.html">Tensorflow with Nvidia CUDA, building with Bazel</a> 
+
 </body>
 </html>
