--- a/Tensorflow_Build_CUDA.html
+++ b/Tensorflow_Build_CUDA.html
@@ -3,25 +3,196 @@
 <TITLE>Notes about Building Tensorflow (CUDA) and Tensorflow Serving with Bazel</TITLE>
 </HEAD>
 
-//<a href="http://somegreatsite.com">Link Name</a>
+<H1>H1</H1>
+
+<H2>Setting up the CUDA 7.5 and cudnn-7.0 v4.0 on Ubuntu 15.04 </H2>
+<H3>GPU Hardware NVIDIA GeForce 840m. compute capability = 5.2</H3>
+
+Skipping the earlier steps....:
+
+//For post installations steps mentioned in CUDA_installation_linux.pdf
+
+export PATH=/usr/local/cuda-7.5/bin:$PATH
+export LD_LIBRARY_PATH=/usr/local/cuda-7.5/lib64:$LD_LIBRARY_PATH
+
+add to :
+
+$ ~/.profile 
+
+Now you need to log in and logged out to load ~/.profile
+however there is a work around this by sourcing
+
+NVIDIA DRIVER VERSION was VERIFIED using
+$ cat /proc/driver/nvidia/version
+
+Output: 
+NVRM version: NVIDIA UNIX x86_64 Kernel Module  352.79  Wed Jan 13 16:17:53 PST 2016
+GCC version:  gcc version 4.9.2 (Ubuntu 4.9.2-10ubuntu13) 
+
+//Test Samples need to be $make
+irtza@irtzaPC:~/cuda_samples/NVIDIA_CUDA-7.5_Samples/1_Utilities/deviceQuery $ make 
+
+//Run the binaries from the same directory using 
+$./deviceQuery
+
+If the following steps are completed, a critical portion of the entire setup is done!
+
+git was Set up
+
+Bazel pre-requisites were installed from here.
+http://bazel.io/docs/install.html
+
+$ sudo apt-get install openjdk-8-jdk
+
+//JDK 8 Success! 
+
+Bazel installed in home/bin
+PATH was set in ~/.bashsrc
+
+gRpc installed !
+$ pip install grpcio
+
+=============================================================
+ALL TENSORFLOW dependencies Bulk installed..
+Problem with conda? hope not !
+If there is a problem with CONDA use Tensorflow in a virtual env 
+
+BULK install tensorflow dependencies :
+
+$ sudo apt-get update && sudo apt-get install -y \
+>         build-essential \
+>         curl \
+>         git \
+>         libfreetype6-dev \
+>         libpng12-dev \
+>         libzmq3-dev \
+>         pkg-config \
+>         python-dev \
+>         python-numpy \
+>         python-pip \
+>         software-properties-common \
+>         swig \
+>         zip \
+>         zlib1g-dev
 
 
-<H1>This is a Header</H1>
+Tensorflow Serving was Repo Cloned --recurse-submodule also clones all the dependencies such as grpc.io
 
-<H2>This is a Medium Header</H2>
+Recurse submodules also clones its dependencies and so it also cloned tensorflow
 
-Write to me at: <a href="mailto:irtzali@gmail.com">
+$ git clone --recurse-submodules https://github.com/tensorflow/serving
 
-irtzali@gmail.com</a>.
+latest CudNN v4 was installed
+
+extracted into /usr/local/cuda
+extracted it there... 
+
+version: 
+	cudnn-7.0-linux-x64-v4.0-prod.tgz
+
+Run ./Configure script in cloned repository : /serving/Tensorflow
+
+$ ./configure
+
+==OUTPUT and choices===================================================
+irtza@irtzaPC:~/serving/tensorflow$ ./configure
+Please specify the location of python. [Default is /home/irtza/Downloads/enter/bin/python]: /home/irtza/Downloads/enter/bin/python
+Do you wish to build TensorFlow with GPU support? [y/N] y
+GPU support will be enabled for TensorFlow
+Please specify the Cuda SDK version you want to use, e.g. 7.0. [Leave empty to use system default]: 7.5
+Please specify the location where CUDA 7.5 toolkit is installed. Refer to README.md for more details. [Default is /usr/local/cuda]: /usr/local/cuda-7.5
+Please specify the Cudnn version you want to use. [Leave empty to use system default]: v4
+Please specify the location where cuDNN v4 library is installed. Refer to README.md for more details. [Default is /usr/local/cuda-7.5]: 
+Invalid path to cuDNN v4 toolkit. Neither of the following two files can be found:
+/usr/local/cuda-7.5/lib64/libcudnn.so.v4
+/usr/local/cuda-7.5/libcudnn.so.v4
+.v4
+Please specify the Cudnn version you want to use. [Leave empty to use system default]: 
+Please specify the location where cuDNN  library is installed. Refer to README.md for more details. [Default is /usr/local/cuda-7.5]: 
+Please specify a list of comma-separated Cuda compute capabilities you want to build with.
+You can find the compute capability of your device at: https://developer.nvidia.com/cuda-gpus.
+Please note that each additional compute capability significantly increases your build time and binary size.
+[Default is: "3.5,5.2"]: 
+5.0
+Setting up Cuda include
+Setting up Cuda lib64
+Setting up Cuda bin
+Setting up Cuda nvvm
+Configuration finished
+
+//Things look successfull here. Going back to tensorflow tutorial
+===============IMPORTANT=====================================
+// BEFORE BUILDING with Bazel check Bazel documentation
+// ALWAYS use "--local_resources 2048,0.5,1.0" option with Bazel
+// to keep shell active and avoid compiler crashes..
+// the values after this option are RAM in MB , processor 
+// capacity, and IO useage
+
+=====================================================
+	$ bazel build -c opt --local_resources 2048,0.5,1.0 --config=cuda //tensorflow/cc:tutorials_example_trainer
+
+//successful!
+//GPU test passed 
+
+	$ bazel-bin/tensorflow/cc/tutorials_example_trainer --use_gpu
+
+//Buiding PIP package..
+
+	$ bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
+
+//Building PIP pacakage with --config=cuda
+
+	$ bazel build -c opt --config=cuda //tensorflow/tools/pip_package:build_pip_package
+
+	$ bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg
+
+# The name of the .whl file will depend on your platform.
+	$ pip install /tmp/tensorflow_pkg/tensorflow-0.7.1-py2-none-linux_x86_64.whl
+
+=======OPtional==========
+//// If you're developing TensorFlow itself 
+
+	bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
+	mkdir _python_build
+	cd _python_build
+	ln -s ../bazel-bin/tensorflow/tools/pip_package/build_pip_package.runfiles/* .
+	ln -s ../tensorflow/tools/pip_package/* .
+	python setup.py develop
+
+======== i didnt do it However============
+Create the pip package and install
+
+When building from source, you will still build a pip package and install that.
+
+
+$ bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
+
+To build with GPU support:
+
+$ bazel build -c opt --config=cuda //tensorflow/tools/pip_package:build_pip_package
+
+$ bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg
+
+The name of the .whl file will depend on your platform.
+$ pip install /tmp/tensorflow_pkg/tensorflow-0.7.1-py2-none-linux_x86_64.whl
+
+
+$ pip install /tmp/tensorflow_pkg/tensorflow-0.7.1-py2-none-linux_x86_64.whl
+=======================================================
+// Follow Install prerequisites subsection.
+// https://tensorflow.github.io/serving/setup
+
+
 
 <P> This is a new paragraph!
 
 <P> <B>This is a new paragraph!</B>
 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-
 <HR>
 
-</BODY>
+Write to me at: <a href="mailto:irtzali@gmail.com">
+irtzali@gmail.com</a>.
 
+</BODY>
 </HTML> 
