--- a/Tensorflow_Build_CUDA.html
+++ b/Tensorflow_Build_CUDA.html
@@ -6,15 +6,15 @@
 <H1>H1</H1>
 
 <H2>Setting up the CUDA 7.5 and cudnn-7.0 v4.0 on Ubuntu 15.04 </H2>
-<H3>GPU Hardware NVIDIA GeForce 840m. compute capability = 5.2</H3>
-
+<H3>GPU Hardware NVIDIA GeForce 840m. compute capability = 5.0</H3>
+<br>
 Skipping the earlier steps....:
-
+<br>
 //For post installations steps mentioned in CUDA_installation_linux.pdf
-
-export PATH=/usr/local/cuda-7.5/bin:$PATH
+<br>
+export PATH=/usr/local/cuda-7.5/bin:$PATH<br>
 export LD_LIBRARY_PATH=/usr/local/cuda-7.5/lib64:$LD_LIBRARY_PATH
-
+<br>
 add to :
 
 $ ~/.profile 
