--- a/Tensorflow_Build_CUDA.html
+++ b/Tensorflow_Build_CUDA.html
@@ -3,7 +3,7 @@
 <TITLE>Notes about Building Tensorflow (CUDA) and Tensorflow Serving with Bazel</TITLE>
 </HEAD>
 
-<H1>H1</H1>
+<H1>Irtaza's Blog</H1>
 
 <H2>Setting up the CUDA 7.5 and cudnn-7.0 v4.0 on Ubuntu 15.04 </H2>
 <H3>GPU Hardware NVIDIA GeForce 840m. compute capability = 5.0</H3>
