--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Trying out github pages for my first blog, I would be sharing some of my work soon ...</p>
+<h1>Irtaza's Blog</h1>
 
-<h3>Tensorflow </h3>
+<h3>Tensorflow Setup with Bazel + CUDA + Anaconda</h3>
 <a href="http://irtza.github.io/Tensorflow_Build_CUDA.html">Tensorflow with Nvidia CUDA, building with Bazel</a> 
 
 </body>
