--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <br>
 <br>
 <a href="http://irtza.github.io/Tensorflow_Serving.html">Building Tensorflow Serving with Bazel</a> 
+<br>
+<br>
+<a href="http://irtza.github.io/mnist_server.html">Building Tensorflow Serving with Bazel</a> 
+
 
 </body>
 </html>
